# adb_manager

./: Cargo.toml  README.md  build.rs  build_release.ps1  installer.iss
src/: adb.rs  main.rs
src/tabs/: connect_tab.rs  devices_tab.rs  file_manager_tab.rs  mod.rs  reverse_tcp_tab.rs
