[package]
name = "adb_manager"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
eframe = { version = "0.24.1", features = ["default"] }
egui = "0.24.1"
rfd = "0.12"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.9"
features = ["winuser", "windef"]

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
strip = true  # Automatically strip symbols from the binary
lto = true    # Enable Link Time Optimization
codegen-units = 1  # Maximize size reduction optimizations
panic = 'abort'    # Remove panic unwinding to reduce binary size
